# backend/app/handlers/mappa_conquistas_handler.go
@@ -11,7 +11,7 @@ import (
 
 func init() {
 	Routes["/conquistas/:cod_secao"] = RouteData{
-		Name:      "Conquistas Seção",		
+		Name:      "Conquistas Seção",
 		Handler:   MappaConquistasHandler,
 		CacheTime: time.Hour,
 		Mappa:     true,
@@ -26,7 +26,7 @@ func init() {
 // @Param   cod_secao     path   int64  true "Código Seção"
 // @Param   Authorization header string true "Authorization"
 // @Produce json
-// @Success 200 {object} responses.MappaMarcacaoResponse
+// @Success 200 {object} []responses.FullConquistaResponse
 // @Failure 400 {object} handlers.ReplyMessage
 // @Router  /mappa/conquistas/{cod_secao} [get]
 func MappaConquistasHandler(c *fiber.Ctx) error {
@@ -39,10 +39,9 @@ func MappaConquistasHandler(c *fiber.Ctx) error {
 	if err = contextData.NeedsAuth(c); err != nil {
 		return err
 	}
-	marcacoes, err := contextData.MappaService.GetConquistas(codSecao, contextData.Authorization)
+	marcacoes, err := contextData.MappaService.GetConquistasFull(codSecao, contextData.Authorization)
 	if err != nil {
 		return reply_error(c, 404, "Falha ao obter marcações", err)
 	}
 	return c.JSON(marcacoes)
-	// TODO: Implementar dados agregados das conquistas, incluindo os associados e a especialidade
 }
